--- a/ethwatch/App.config
+++ b/ethwatch/App.config
@@ -13,6 +13,12 @@
             <setting name="lol" serializeAs="String">
                 <value />
             </setting>
+            <setting name="lol1" serializeAs="String">
+                <value>0, 0, 0, 0</value>
+            </setting>
+            <setting name="lol2" serializeAs="String">
+                <value>1</value>
+            </setting>
         </ethwatch.Properties.Settings>
     </userSettings>
 </configuration>
