--- a/ethwatch/Properties/Settings.settings
+++ b/ethwatch/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="lol" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="lol1" Type="System.Windows.Forms.Padding" Scope="User">
+      <Value Profile="(Default)">0, 0, 0, 0</Value>
+    </Setting>
+    <Setting Name="lol2" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
