Fixed bug where when webAPI gave an integer app crashed.. only fixed function (get_CurrentHashrate). Need to do as needed.

--- a/ethwatch/App.config
+++ b/ethwatch/App.config
@@ -19,6 +19,18 @@
             <setting name="lol2" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="lol3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="lol4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="lol5" serializeAs="String">
+                <value>22</value>
+            </setting>
+            <setting name="lol6" serializeAs="String">
+                <value />
+            </setting>
         </ethwatch.Properties.Settings>
     </userSettings>
 </configuration>
