Got App to remember some stuff & cleaned.

--- a/ethwatch/App.config
+++ b/ethwatch/App.config
@@ -31,6 +31,9 @@
             <setting name="lol6" serializeAs="String">
                 <value />
             </setting>
+            <setting name="chked1" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ethwatch.Properties.Settings>
     </userSettings>
 </configuration>
