--- a/ethwatch/Properties/Settings.settings
+++ b/ethwatch/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="lol6" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="chked1" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
